@@ -4,7 +4,7 @@
       "Glib::Object::Introspection Team <gtk-perl-list at gnome dot org>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "ExtUtils::MakeMaker version 6.68, CPAN::Meta::Converter version 2.131560",
+   "generated_by" : "ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.132830",
    "license" : [
       "lgpl_2_1"
    ],
@@ -27,11 +27,6 @@
       ]
    },
    "prereqs" : {
-      "build" : {
-         "requires" : {
-            "ExtUtils::MakeMaker" : "0"
-         }
-      },
       "configure" : {
          "requires" : {
             "ExtUtils::Depends" : "0.3",
@@ -41,8 +36,6 @@
       },
       "runtime" : {
          "requires" : {
-            "ExtUtils::Depends" : "0.3",
-            "ExtUtils::PkgConfig" : "1",
             "Glib" : "1.28"
          }
       }
@@ -64,5 +57,5 @@
       },
       "x_MailingList" : "https://mail.gnome.org/mailman/listinfo/gtk-perl-list"
    },
-   "version" : "0.016"
+   "version" : "0.017"
 }
