@@ -2,14 +2,13 @@
 abstract: 'Dynamically create Perl language bindings'
 author:
   - 'Glib::Object::Introspection Team <gtk-perl-list at gnome dot org>'
-build_requires:
-  ExtUtils::MakeMaker: 0
+build_requires: {}
 configure_requires:
   ExtUtils::Depends: 0.3
   ExtUtils::PkgConfig: 1
   Glib: 1.28
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.68, CPAN::Meta::Converter version 2.131560'
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.132830'
 license: lgpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,8 +24,6 @@ no_index:
     - MY
     - Glib::Object::Introspection::_FuncWrapper
 requires:
-  ExtUtils::Depends: 0.3
-  ExtUtils::PkgConfig: 1
   Glib: 1.28
 resources:
   MailingList: https://mail.gnome.org/mailman/listinfo/gtk-perl-list
@@ -34,4 +31,4 @@ resources:
   homepage: http://gtk2-perl.sourceforge.net
   license: http://www.gnu.org/licenses/lgpl-2.1.html
   repository: git://git.gnome.org/perl-Glib-Object-Introspection
-version: 0.016
+version: 0.017
