@@ -33,7 +33,7 @@ instance_sv_to_pointer (GICallableInfo *info, SV *sv)
 			                        info_type,
 			                        sv);
 		} else {
-			dwarn ("    boxed type: %s (%d)\n",
+			dwarn ("    boxed type: %s (%"G_GSIZE_FORMAT")\n",
 			       g_type_name (type), type);
 			pointer = gperl_get_boxed_check (sv, type);
 		}
@@ -81,11 +81,11 @@ instance_pointer_to_sv (GICallableInfo *info, gpointer pointer)
 			dwarn ("    unboxed type\n");
 			sv = struct_to_sv (container, info_type, pointer, FALSE);
 		} else {
-			dwarn ("    boxed type: %s (%d)\n",
+			dwarn ("    boxed type: %s (%"G_GSIZE_FORMAT")\n",
 			       g_type_name (type), type);
 			sv = gperl_new_boxed (pointer, type, FALSE);
 		}
-		warn ("    -> boxed pointer: %p\n", pointer);
+		dwarn ("    -> boxed pointer: %p\n", pointer);
 		break;
 	    }
 
@@ -227,6 +227,10 @@ sv_to_interface (GIArgInfo * arg_info,
 	    case GI_INFO_TYPE_ENUM:
 	    {
 		GType type = get_gtype ((GIRegisteredTypeInfo *) interface);
+		if (G_TYPE_NONE == type) {
+			ccroak ("Could not handle unknown enum type %s",
+			        g_base_info_get_name (interface));
+		}
 		/* FIXME: Check storage type? */
 		arg->v_long = gperl_convert_enum (type, sv);
 		break;
@@ -235,6 +239,10 @@ sv_to_interface (GIArgInfo * arg_info,
 	    case GI_INFO_TYPE_FLAGS:
 	    {
 		GType type = get_gtype ((GIRegisteredTypeInfo *) interface);
+		if (G_TYPE_NONE == type) {
+			ccroak ("Could not handle unknown flags type %s",
+			        g_base_info_get_name (interface));
+		}
 		/* FIXME: Check storage type? */
 		arg->v_long = gperl_convert_flags (type, sv);
 		break;
@@ -246,7 +254,7 @@ sv_to_interface (GIArgInfo * arg_info,
 		break;
 
 	    default:
-		ccroak ("sv_to_interface: Don't know how to handle info type %s (%d)",
+		ccroak ("sv_to_interface: Could not handle info type %s (%d)",
 		        g_info_type_to_string (info_type),
 		        info_type);
 	}
@@ -295,7 +303,7 @@ interface_to_sv (GITypeInfo* info, GIArgument *arg, gboolean own, GPerlI11nInvoc
 			if (own)
 				g_boxed_free (type, arg->v_pointer);
 		} else {
-			dwarn ("    boxed type: %d (%s)\n",
+			dwarn ("    boxed type: %"G_GSIZE_FORMAT" (%s)\n",
 			       type, g_type_name (type));
 			sv = gperl_new_boxed (arg->v_pointer, type, own);
 		}
@@ -305,6 +313,10 @@ interface_to_sv (GITypeInfo* info, GIArgument *arg, gboolean own, GPerlI11nInvoc
 	    case GI_INFO_TYPE_ENUM:
 	    {
 		GType type = get_gtype ((GIRegisteredTypeInfo *) interface);
+		if (G_TYPE_NONE == type) {
+			ccroak ("Could not handle unknown enum type %s",
+			        g_base_info_get_name (interface));
+		}
 		/* FIXME: Is it right to just use v_long here? */
 		sv = gperl_convert_back_enum (type, arg->v_long);
 		break;
@@ -313,6 +325,10 @@ interface_to_sv (GITypeInfo* info, GIArgument *arg, gboolean own, GPerlI11nInvoc
 	    case GI_INFO_TYPE_FLAGS:
 	    {
 		GType type = get_gtype ((GIRegisteredTypeInfo *) interface);
+		if (G_TYPE_NONE == type) {
+			ccroak ("Could not handle unknown flags type %s",
+			        g_base_info_get_name (interface));
+		}
 		/* FIXME: Is it right to just use v_long here? */
 		sv = gperl_convert_back_flags (type, arg->v_long);
 		break;
